--- a/iNotepy.html
+++ b/iNotepy.html
@@ -13116,7 +13116,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="Basic-Python-Programming-Notebook-1">Basic Python Programming Notebook 1<a class="anchor-link" href="#Basic-Python-Programming-Notebook-1">&#182;</a></h1><p>Author - Suvhradip Ghosh</p>
+<h1 id="Basic-Python-Programming-Notebook-1">Basic Python Programming Notebook 1<a class="anchor-link" href="#Basic-Python-Programming-Notebook-1">&#182;</a></h1><p>Author - VEENIT SINGH</p>
 <p>Python is an interpreted, high-level, general-purpose programming language. Created by Guido van Rossum and first released in 1991, Python has a design philosophy that emphasizes code readability, notably using significant whitespace. It provides constructs that enable clear programming on both small and large scales.</p>
 <p>This is a ipython notebook for learning python for Machine Learning.</p>
 
